阶段 D“交易与执行”版本
